fix: edit flex wrap in header

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header ul, footer ul{
     display: flex;
     justify-content: space-between;
     color: #efe9d3;
+    flex-wrap: wrap;
 }
 
 header ul {
